# dftd4

./: .codecov.yml  .gitignore  fpm.toml  meson.build
.github/workflows/: docs.yml  fortran-build.yml  wheel.yml
app/: argument.f90  cli.f90  driver.f90  help.f90  main.f90  tester.py
assets/examples/api-minimal-3.7.0/app/: main.f90
assets/examples/api-minimal-latest/app/: main.f90
assets/examples/api-read-coord/app/: main.f90
config/: CMakeLists.txt  template.pc
doc/: conf.py
export/: meson.build  tocpp.f90
python/: .gitignore  README.rst  build.py  ffibuilder.py  pyproject.toml
python/dftd4/: __init__.py  ase.py  interface.py  library.py  parameters.py  pyscf.py  qcschema.py  test_ase.py  test_interface.py
src/: dftd4.f90
src/dftd4/: api.f90  blas.F90  compat.f90  damping.f90  disp.f90  model.f90  ncoord.f90  numdiff.f90  output.f90  param.f90  reference.f90  utils.f90
src/dftd4/damping/: atm.f90  rational.f90
src/dftd4/data/: hardness.f90  wfpair.f90  zeff.f90
src/dftd4/model/: d4.f90  d4s.f90  type.f90  utils.f90
test/unit/: main.f90  test_dftd4.f90  test_model.f90  test_pairwise.f90  test_param.f90  test_periodic.f90
