[build-system]
requires = ["poetry_core>=1", "cffi", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dftd4"
version = "3.1.0"
description = "Python API of the DFT-D4 project"
authors = ["Sebastian Ehlert <awvwgk@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/dftd4/dftd4"
license = "LGPL-3.0-or-later"
include = ["COPYING", "COPYING.LESSER"]
build = "build.py"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Fortran",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1"
cffi = "^1"
pytest = {version = "^5", optional = true}
pytest-cov = {version = "^2", optional = true}
ase = {version = "^3", optional = true}
qcelemental = {version = "^0", optional = true}
tomlkit = {version = "^0", optional = true}
pkgconfig = {version = "^1", optional = true}

[tool.poetry.extras]
build = ["pkgconfig"]
ase = ["ase"]
qcschema = ["qcelemental"]
parameters = ["tomlkit"]
test = ["pytest", "pytest-cov"]
